--- a/async-uri.opam
+++ b/async-uri.opam
@@ -9,13 +9,12 @@ build: [ "dune" "build" "-j" jobs "-p" name ]
 run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
 depends: [
   "dune" {>= "1.11.4"}
+  "uri" {>= "3.1.0"}
   "core" {>= "v0.12.0"}
   "async" {>= "v0.12.0"}
   "async_ssl" {>= "v0.12.0"}
-  "uri" {>= "3.1.0"}
-  "logs" {>= "0.7.0"}
-  "logs-async" {= version}
 ]
-synopsis: "Open connections from URLs with Async"
-description: """
-"""
+synopsis: "Open Async (TLS) TCP connections with Uri.t"
+description: """Simple wrapper to the Async's Tcp module to
+open connections from URLs. If the URL scheme is detected to require
+TLS, TLS will be used."""
