--- a/async-uri.opam
+++ b/async-uri.opam
@@ -8,12 +8,13 @@ doc: "https://vbmithr.github.io/async-uri/doc"
 build: [ "dune" "build" "-j" jobs "-p" name ]
 run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
 depends: [
-  "ocaml" {>= "4.08.0"}
+  "ocaml" {>= "4.11.0"}
   "dune" {>= "1.11.4"}
-  "uri-sexp" {>= "3.1.0"}
-  "core" {>= "v0.13.0"}
-  "async" {>= "v0.13.0"}
-  "async_ssl" {>= "v0.13.0"}
+  "uri" {>= "4.0.0"}
+  "uri-sexp" {>= "4.0.0"}
+  "core" {>= "v0.14.0"}
+  "async" {>= "v0.14.0"}
+  "async_ssl" {>= "v0.14.0"}
 ]
 synopsis: "Open Async (TLS) TCP connections with Uri.t"
 description: """Simple wrapper to the Async's Tcp module to open
