--- a/async-uri.opam
+++ b/async-uri.opam
@@ -10,15 +10,15 @@ authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
 license: "ISC"
 tags: ["async" "uri" "tls" "ssl"]
 homepage: "https://github.com/vbmithr/async-uri"
-doc: "https://github.com/vbmithr/async-uri"
+doc: "https://vbmithr.github.io/async-uri"
 bug-reports: "https://github.com/vbmithr/async-uri/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.10"}
   "uri-sexp"
-  "core" {>= "0.16"}
-  "async" {>= "0.16"}
-  "async_ssl" {>= "0.16"}
+  "core" {>= "v0.16"}
+  "async" {>= "v0.16"}
+  "async_ssl" {>= "v0.16"}
   "odoc" {with-doc}
 ]
 build: [
